--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT урок 2<h1>
-	<p>новое изменение файла index.html</p>	
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa fugit hic aliquid excepturi molestiae ab quos pariatur non? Molestias beatae voluptate, sit quo, iusto aliquid modi. Adipisci vel, architecto!</p>
 </body>
-</html>>
+</html>
